# hardpotato

./: .gitignore  README.md  demo.py  pyproject.toml  setup.py  test.py
.github/workflows/: pytest-ruff-lint.yml  pytest.yml
examples/: CA.py  CV.py  CV_scanrate.py  LSV.py  OCP.py  RandlesSevcik.py  ferrocene_test.mscr
src/hardpotato/: __init__.py  chi1205b.py  chi1242b.py  chi601e.py  chi760e.py  emstatpico.py  load_data.py  pico_instrument.py  pico_mscript.py  pico_serial.py  potentiostat.py  save_data.py  test.py
tests/: README.md  conftest.py  test_emstatpico.py  test_load_data.py  test_pico_instrument.py  test_pico_mscript.py  test_pico_serial.py  test_potentiostat.py  test_save_data.py
