[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hardpotato"
version = "1.3.14"
description = "Python API to control programmable potentiostats."
readme = "README.md"
authors = [
    {name = "Oliver Rodriguez", email = "oliver.rdz@softpotato.xyz"},
    {name = "Odin Holmes"},
    {name = "Gregory Robben"}
]
keywords = ["Electrochemistry"]
urls = {Homepage = "https://github.com/BU-KABlab/hardpotato"}
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "softpotato",
    "pyserial",
    "ruff"
]

requires-python = ">=3.10"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

